[package]
name = "product_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.17.1"
dwbhk = "0.1.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
chrono = "0.4.26"
